--- a/correlation_difference.ipynb
+++ b/correlation_difference.ipynb
@@ -18,10 +18,10 @@
     "from scipy.stats import permutation_test\n",
     "import random\n",
     "\n",
-    "metadata = pd.read_csv('/home/thuy/Downloads/_1.5T_T1-weighted_ICBM_12_11_2022.csv')\n",
+    "metadata = pd.read_csv(os.path.join(os.getcwd(), '/data/_1.5T_T1-weighted_ICBM_12_11_2022.csv'))\n",
     "\n",
     "samples = [70,100,120,150]\n",
-    "volume_list_all = sorted(glob.glob(os.path.join('/home/thuy/repo/dice/volume_cal', '*.csv')))\n",
+    "volume_list_all = sorted(glob.glob(os.path.join(os.getcwd(), '/data/volume', '*.csv')))\n",
     "\n",
     "segs = ['Left-Thalamus-Proper', 'Left-Caudate', 'Left-Putamen', 'Left-Pallidum',\n",
     "'Left-Hippocampus', 'Left-Amygdala', 'Left-Accumbens-area',\n",
@@ -230,7 +230,7 @@
     "\n",
     "\n",
     "f_name = 'corr_diff.csv'\n",
-    "# print(f_name)\n",
+    "\n",
     "f = open(os.path.join(os.getcwd(), f_name), 'w', encoding='utf-8')\n",
     "f.write('n,neurodesk,local\\n')\n",
     "for n_sample,neuro_diff,local_diff in zip(sample,stat_neuro,stat_local):\n",
@@ -254,7 +254,7 @@
     "import pandas as pd\n",
     "from pandas.api.types import CategoricalDtype\n",
     "\n",
-    "diff = pd.read_csv('/data/corr_diff.csv', header=0)\n",
+    "diff = pd.read_csv(os.path.join(os.getcwd(), '/data/corr_diff.csv'), header=0)\n",
     "\n",
     "sample_dict = {10: 'n=10', 30: 'n=30', 50: 'n=50'}\n",
     "diff['n'] = diff['n'].map(sample_dict)\n",
