update instruction and fix bug when calculating Dice

--- a/tracelog.ipynb
+++ b/tracelog.ipynb
@@ -16,7 +16,11 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Specify directory of logfile and log summary"
+    "## Specify directory of logfile and log summary\n",
+    "#### Replace the following empty strings with your paths to process data that you want to compare.\n",
+    "\n",
+    "#### **PATH_TO_LOGFILE1** = ' '\n",
+    "#### **PATH_TO_LOGFILE2** = ' '"
    ]
   },
   {
@@ -285,12 +289,12 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.4 (main, Dec 19 2022, 20:24:16) [GCC 9.4.0]"
+   "version": "3.8.10 (default, Nov 14 2022, 12:59:47) \n[GCC 9.4.0]"
   },
   "orig_nbformat": 4,
   "vscode": {
    "interpreter": {
-    "hash": "3ad933181bd8a04b432d3370b9dc3b0662ad032c4dfaa4e4f1596c548f763858"
+    "hash": "916dbcbb3f70747c44a77c7bcd40155683ae19c65e1c03b4aa3499c5328201f1"
    }
   }
  },
