update instruction to for path string

--- a/Dice_calculate.ipynb
+++ b/Dice_calculate.ipynb
@@ -278,12 +278,16 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "1fcd2226-8fb7-4e13-b339-e887f634d418",
    "metadata": {},
    "source": [
     "## Specify the path to directories of images to compare (source_dir, target_dir)\n",
-    "## Specify new directory for outputs (work_dir)"
+    "#### Replace **\"PATH_TO_IMAGE_DIR1\" \"PATH_TO_IMAGE_DIR2\"** with your suitable directories.\n",
+    "\n",
+    "## Specify new directory for outputs (work_dir)\n",
+    "#### Replace **\"PATH_TO_OUTPUT_DIR\"** with your suitable directories."
    ]
   },
   {
