--- a/flirt_first_correlation.ipynb
+++ b/flirt_first_correlation.ipynb
@@ -143,11 +143,14 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "3ce5f3ec-11b6-42b0-987c-932a165057c5",
    "metadata": {},
    "source": [
-    "## Specify the directories for images to compare"
+    "## Specify the directories for images to compare **before running the following cell**\n",
+    "\n",
+    "#### Replace **PATH_TO_IMAGE_DIR1** and **PATH_TO_IMAGE_DIR2** with your suitable directories\n"
    ]
   },
   {
@@ -164,7 +167,7 @@
     "flirts1 = sorted(glob.glob(os.path.join(PATH_TO_IMAGE_DIR1, '*' + flirt)))\n",
     "flirts2 = sorted(glob.glob(os.path.join(PATH_TO_IMAGE_DIR2, '*' + flirt)))\n",
     "\n",
-    "first = 'firstseg.nii.gz'\n",
+    "first = 'firstseg_mni.nii.gz'\n",
     "firsts1 = sorted(glob.glob(os.path.join(PATH_TO_IMAGE_DIR1, '*' + first)))\n",
     "firsts2 = sorted(glob.glob(os.path.join(PATH_TO_IMAGE_DIR2, '*' + first)))\n",
     "\n",
