--- a/fsl_pipeline.ipynb
+++ b/fsl_pipeline.ipynb
@@ -63,7 +63,7 @@
     "\tfor filename in \"${niifile[@]}\";\n",
     "\t\tdo \n",
     "\t\t \n",
-    "  \t\t\t\n",
+    "  \t\t\techo ${filename}\n",
     "\t\t\techo \"running FIRST\"\n",
     "\t\t\timage=$(basename ${filename%.*})\n",
     "\t\t\trun_first_all -i ${filename} -o ${filename%.*}\n",
@@ -116,7 +116,6 @@
     "\tdo \n",
     "\techo ${filename}\n",
     "\tflirt -in  ${filename%.*}_all_fast_firstseg.nii.gz -ref ${FSLDIR}/data/standard/MNI152_T1_1mm.nii.gz -applyxfm -init  ${filename%.*}_to_std_sub.mat -out  ${filename%.*}_all_fast_firstseg_mni.nii.gz -interp nearestneighbour\n",
-    "\n",
     "\tdone\n",
     "\n",
     "echo \"All done\""
