--- a/tracelog.ipynb
+++ b/tracelog.ipynb
@@ -17,10 +17,13 @@
    "metadata": {},
    "source": [
     "## Specify directory of logfile and log summary\n",
-    "#### Replace the following empty strings with your paths to process data that you want to compare.\n",
+    "### Replace the following empty strings with your paths to process data that you want to compare.\n",
     "\n",
-    "#### **PATH_TO_LOGFILE1** = ' '\n",
-    "#### **PATH_TO_LOGFILE2** = ' '"
+    "\n",
+    "| **Log file**           | **System 1**              | **System 2**              |\n",
+    "|------------------------|---------------------------|---------------------------|\n",
+    "| Log all recorded calls | PATH_TO_LOGFILE1 = ' '    | PATH_TO_LOGFILE2 = ' '    |\n",
+    "| Log summary            | PATH_TO_LOGSUMMARY1 = ' ' | PATH_TO_LOGSUMMARY2 = ' ' |"
    ]
   },
   {
@@ -30,7 +33,10 @@
    "outputs": [],
    "source": [
     "PATH_TO_LOGFILE1 = ''\n",
-    "PATH_TO_LOGFILE2 = ''"
+    "PATH_TO_LOGSUMMARY1 = ''\n",
+    "\n",
+    "PATH_TO_LOGFILE2 = ''\n",
+    "PATH_TO_LOGSUMMARY2 = ''"
    ]
   },
   {
@@ -47,7 +53,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "with open(os.path.join(PATH_TO_LOGFILE1, 'log-run-first-summary')) as f:\n",
+    "with open(os.path.join(PATH_TO_LOGSUMMARY1)) as f:\n",
     "    lines_sum = f.readlines()\n",
     "\n",
     "uniquecalls=[]\n",
@@ -58,7 +64,7 @@
     "uniquecalls.append('exit')\n",
     "uniquecalls.append('+++')\n",
     "\n",
-    "with open(os.path.join(PATH_TO_LOGFILE1,'log-run-first')) as f:\n",
+    "with open(os.path.join(PATH_TO_LOGFILE1)) as f:\n",
     "    lines = f.readlines()\n",
     "\n",
     "calls = []\n",
@@ -81,7 +87,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "with open(os.path.join(PATH_TO_LOGFILE2, 'log-run-first-summary')) as f:\n",
+    "with open(os.path.join(PATH_TO_LOGSUMMARY2)) as f:\n",
     "    lines_sum = f.readlines()\n",
     "\n",
     "uniquecalls_hpc=[]\n",
@@ -97,7 +103,7 @@
     "    else:\n",
     "        newindex.append(uniquecalls_hpc.index(call)+1000)\n",
     "\n",
-    "with open(os.path.join(PATH_TO_LOGFILE2,'log-run-first')) as f:\n",
+    "with open(os.path.join(PATH_TO_LOGFILE2)) as f:\n",
     "    lines = f.readlines()\n",
     "\n",
     "calls_hpc = []\n",
