--- a/fsl_pipeline.ipynb
+++ b/fsl_pipeline.ipynb
@@ -55,7 +55,7 @@
     "lm1=\"$(mktemp /tmp/lm1.$$.XXXX)\"\n",
     "lm2=\"$(mktemp /tmp/lm2.$$.XXXX)\"\n",
     "logf=\"final.log\"\n",
-    "\n",
+    "FSLDIR=/opt/fsl-6.0.5.1\n",
     "\n",
     "declare -a niifile=($(find \"$PWD\" -type f -iname \"*.nii\"));\n",
     "for i in {1..2};\n",
@@ -111,7 +111,6 @@
     "    fi\n",
     "done\n",
     "\n",
-    "declare -a niifile=($(find \"$1\" -type f -iname \"*.nii\"));\n",
     "for filename in \"${niifile[@]}\";\n",
     "\tdo \n",
     "\techo ${filename}\n",
