add details to instruction

--- a/Dice_calculate.ipynb
+++ b/Dice_calculate.ipynb
@@ -1,6 +1,38 @@
 {
  "cells": [
   {
+   "attachments": {},
+   "cell_type": "markdown",
+   "id": "9c612c9c",
+   "metadata": {},
+   "source": [
+    "# Dice Dissimilarity Calculation using Nipype\n",
+    "\n",
+    "In this Jupyter notebook, we will be using the nipype library to calculate the Dice dissimilarity between two sets of neuroimaging volumes. The pipeline will also include a Plot Histogram interface to generate a .txt file of all Dice scores and a histogram plot in .png format. \n",
+    "\n",
+    "## Inputs\n",
+    "- Two directories containing neuroimaging volumes (source_dir, target_dir)\n",
+    "\n",
+    "## Outputs\n",
+    "- Dice score of the two volumes\n",
+    "- .txt file of all Dice scores\n",
+    "- histogram plot in .png format\n",
+    "\n",
+    "## Nipype Workflow\n",
+    "1. Iterate through each outputs from FSL BET, FAST, FLIRT, FIRST\n",
+    "2. Get all files from the two directories and check if they have the same list of subjects\n",
+    "3. Calculate the Dice dissimilarity from the curated files\n",
+    "4. Generate the .txt file of Dice scores and the histogram plot\n",
+    "\n",
+    "To run the code on your local machine, please follow these steps:\n",
+    "1. Replace the string \"PATH_TO_IMAGE_DIR1\", \"PATH_TO_IMAGE_DIR2\" and \"PATH_TO_OUTPUT_DIR\" with the actual paths to the source and target directories and the working directory on your machine. \n",
+    "2. Replace \"PATH_TO_IMAGE_DIR1\" and \"PATH_TO_IMAGE_DIR2\" with your suitable directories of images to compare.\n",
+    "3. Replace \"PATH_TO_OUTPUT_DIR\" with a new directory for outputs.\n",
+    "4. Run the code and wait for it to complete.\n",
+    "5. Once the code has completed running, the user can find the output files (the .txt file and .png plot) in the directory specified in \"PATH_TO_OUTPUT_DIR\"."
+   ]
+  },
+  {
    "cell_type": "markdown",
    "id": "00a9400f-cfc2-483f-9814-2d0e6463c2ac",
    "metadata": {},
@@ -50,16 +82,6 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "id": "3c3eacba-5577-4091-a414-747678917ad4",
-   "metadata": {},
-   "source": [
-    "## Dice Dissimilarity calculation nipype interface\n",
-    "#### - Inputs take each volume from 2 directories\n",
-    "#### - Output gives Dice score of 2 volumes"
-   ]
-  },
-  {
    "cell_type": "code",
    "execution_count": null,
    "id": "623cbd84-6693-4f83-973c-081955aeab7b",
@@ -101,16 +123,6 @@
     "        outputs = self._outputs().get()\n",
     "        outputs[\"dice\"] = self._dice\n",
     "        return outputs"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "07dcbd2c-4e70-4abc-91df-8a80768d29c0",
-   "metadata": {},
-   "source": [
-    "## Plot Histogram nipype interface\n",
-    "#### - Inputs take all Dice scores previously calculated in the pipeline\n",
-    "#### - Outputs give .txt file of all Dice scores and histogram plot in png"
    ]
   },
   {
@@ -177,18 +189,6 @@
     "        outputs[\"plot\"] = os.path.abspath(self._plot)\n",
     "        outputs[\"arr\"] = os.path.abspath(self._arr)\n",
     "        return outputs"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "8fc6a0c6-c8c2-448a-9e94-611406e3a5e4",
-   "metadata": {},
-   "source": [
-    "## Nipype workflow:\n",
-    "#### - Iterate through each outputs from FSL BET, FAST, FLIRT, FIRST\n",
-    "#### - Get all files from 2 directories and check if they have the same list of subjects\n",
-    "#### - Calculate the Dice Dissimilarity from curated files\n",
-    "#### - Generate file of Dice scores (.txt) and their distribution plot (.png) "
    ]
   },
   {
@@ -280,14 +280,10 @@
   {
    "attachments": {},
    "cell_type": "markdown",
-   "id": "1fcd2226-8fb7-4e13-b339-e887f634d418",
+   "id": "d5932272",
    "metadata": {},
    "source": [
-    "## Specify the path to directories of images to compare (source_dir, target_dir)\n",
-    "#### Replace **\"PATH_TO_IMAGE_DIR1\" \"PATH_TO_IMAGE_DIR2\"** with your suitable directories.\n",
-    "\n",
-    "## Specify new directory for outputs (work_dir)\n",
-    "#### Replace **\"PATH_TO_OUTPUT_DIR\"** with your suitable directories."
+    "## REPLACE THE PATH"
    ]
   },
   {
