--- a/correlation_difference.ipynb
+++ b/correlation_difference.ipynb
@@ -21,6 +21,29 @@
    ]
   },
   {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Calculate correlation difference between subcortical volumes and subject age\n",
+    "\n",
+    "In this Jupyter notebook, we will be analysing the effect of segmentation difference in a common meta-analysis:\n",
+    "The pipeline will include a plot of histogram.\n",
+    "\n",
+    "## Inputs\n",
+    "- *.csv file for volumes extracted from output in different systems\n",
+    "- 'metadata.csv'\n",
+    "\n",
+    "## Outputs\n",
+    "- Density plot of correlation difference.\n",
+    "\n",
+    "## Notebook Workflow\n",
+    "1. Iterate through each volumes.\n",
+    "2. Calculate the correlation between subcortical volume vs age and their difference among systems. \n",
+    "3. Generate plot "
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
