--- a/flirt_first_correlation.ipynb
+++ b/flirt_first_correlation.ipynb
@@ -32,12 +32,38 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
-   "id": "75af9455-3d8a-4958-b8e5-a9587f06ad96",
+   "id": "e536589e",
    "metadata": {},
    "source": [
-    "## Calculate total number of mismatches in each output from FSL FIRST (find_mismatch)\n",
-    "## Calculate average intensity difference in FSL FLIRT output (subcortical_diff)"
+    "# Calculate average intensity difference in FSL FLIRT output and total number of mismatches in each output from FSL FIRST\n",
+    "\n",
+    "In this Jupyter notebook, we will be analysing dissimilarity between two sets of neuroimaging volumes:\n",
+    "- Voxel-wise average intensity difference in FSL FLIRT output.\n",
+    "- Total number of mismatches in each output from FSL FIRST.\n",
+    "\n",
+    "The pipeline will include a plot of dissimilarity heatmap in glass brain and a scatterplot of correlation between average intensity difference and number of mismatches.\n",
+    "\n",
+    "## Inputs\n",
+    "- Two directories containing neuroimaging volumes (source_dir, target_dir)\n",
+    "\n",
+    "## Outputs\n",
+    "- Average intensity difference of all subjects: **'intensity_diff_subcortical.nii'**\n",
+    "- Total number of mismatches: **'mean_mismatch.csv'**\n",
+    "- Heatmap plot for the dissimilarity in glass brain\n",
+    "- Scatterplot of correlation \n",
+    "\n",
+    "## Notebook Workflow\n",
+    "1. Iterate through each outputs from FLIRT, FIRST\n",
+    "2. Get all files from the two directories and check if they have the same list of subjects\n",
+    "3. Calculate the average intensity difference and total number of mismatches and store in **'intensity_diff_subcortical.nii'** and **'mean_mismatch.csv'**\n",
+    "4. Generate plot \n",
+    "\n",
+    "To run the code on your local machine, please follow these steps:\n",
+    "1. Replace the string \"PATH_TO_IMAGE_DIR1\", \"PATH_TO_IMAGE_DIR2\" and \"PATH_TO_OUTPUT_DIR\" with the actual paths to the source and target directories and the working directory on your machine. \n",
+    "2. Replace \"PATH_TO_IMAGE_DIR1\" and \"PATH_TO_IMAGE_DIR2\" with your suitable directories of images to compare.\n",
+    "5. Once the code has completed running, the user can find the output files in the same directory where the code runs."
    ]
   },
   {
@@ -52,7 +78,7 @@
     "\n",
     "def find_mismatch(flirts1, flirts2, firsts1, firsts2):\n",
     "    stack_diff = []\n",
-    "    f_name = 'mean_mismatch' + '.csv'\n",
+    "    f_name = 'mean_mismatch.csv'\n",
     "\n",
     "    f = open(os.path.join(os.getcwd(), f_name), 'w', encoding='utf-8')\n",
     "    f.write('subj,mismatch,intdiff\\n')\n",
@@ -148,9 +174,7 @@
    "id": "3ce5f3ec-11b6-42b0-987c-932a165057c5",
    "metadata": {},
    "source": [
-    "## Specify the directories for images to compare **before running the following cell**\n",
-    "\n",
-    "#### Replace **PATH_TO_IMAGE_DIR1** and **PATH_TO_IMAGE_DIR2** with your suitable directories\n"
+    "## Specify the directories for images to compare **before running the following cell**"
    ]
   },
   {
