--- a/fsl_pipeline.ipynb
+++ b/fsl_pipeline.ipynb
@@ -11,21 +11,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "id": "00345266-eb39-40c9-a29a-32cda10ebba3",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "['fsl/6.0.5.1']"
-      ]
-     },
-     "execution_count": 1,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "import lmod\n",
     "await lmod.purge(force=True)\n",
@@ -55,7 +44,9 @@
     "lm1=\"$(mktemp /tmp/lm1.$$.XXXX)\"\n",
     "lm2=\"$(mktemp /tmp/lm2.$$.XXXX)\"\n",
     "logf=\"final.log\"\n",
-    "FSLDIR=/opt/fsl-6.0.5.1\n",
+    "if [ -z \"$FSLDIR\" ]; then\n",
+    "    FSLDIR=/opt/fsl-6.0.5.1\n",
+    "fi\n",
     "\n",
     "declare -a niifile=($(find \"$PWD\" -type f -iname \"*.nii\"));\n",
     "for i in {1..2};\n",
