--- a/fsl_pipeline.ipynb
+++ b/fsl_pipeline.ipynb
@@ -80,7 +80,7 @@
     "\t\t\tfast ${filename%.*}_brain.nii.gz\t\n",
     "\t\tdone\n",
     "\t\n",
-    "\tfind . -type f -name '*brain.nii.gz' -name '*all_fast_firstseg.nii.gz' -name '*to_std_sub.nii.gz' -exec md5sum {} > $lm1 \\;\n",
+    "\tfind . -type f -name '*brain.nii.gz' -name 'brain_seg.nii.gz' -name '*all_fast_firstseg.nii.gz' -name '*to_std_sub.nii.gz' -exec md5sum {} > $lm1 \\;\n",
     "\tif [ -z \"$first_run\" ]; then\n",
     "        cp -a $lm1 $lm2\n",
     "        first_run=1\n",
