--- a/tracelog.ipynb
+++ b/tracelog.ipynb
@@ -1,6 +1,29 @@
 {
  "cells": [
   {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Calculate the accumulated difference in calls to shared libraries\n",
+    "\n",
+    "In this Jupyter notebook, we will be analysing the number of calls to shared libraries during registration (FSL FLIRT) and subcortical segmentation (FSL FIRST).\n",
+    "The pipeline will include a plot of accumulated difference.\n",
+    "\n",
+    "## Inputs\n",
+    "- A logfile for calls to shared library by ltrace.\n",
+    "- A log summary of all the calls\n",
+    "\n",
+    "## Outputs\n",
+    "- Plot of accumulation of difference.\n",
+    "\n",
+    "## Notebook Workflow\n",
+    "1. Iterate through each logfile and log summary.\n",
+    "2. Compare the . \n",
+    "3. Generate plot "
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
@@ -90,26 +113,26 @@
     "with open(os.path.join(PATH_TO_LOGSUMMARY2)) as f:\n",
     "    lines_sum = f.readlines()\n",
     "\n",
-    "uniquecalls_hpc=[]\n",
+    "uniquecalls2=[]\n",
     "for ii, line in enumerate(lines_sum):\n",
     "    if ii>1:\n",
-    "        uniquecalls_hpc.append(line.split(\" \")[-1].split(\"\\n\")[0])\n",
-    "uniquecalls_hpc.append('+++')\n",
+    "        uniquecalls2.append(line.split(\" \")[-1].split(\"\\n\")[0])\n",
+    "uniquecalls2.append('+++')\n",
     "\n",
     "newindex = []\n",
-    "for call in uniquecalls_hpc:        \n",
+    "for call in uniquecalls2:        \n",
     "    if np.isin(call, uniquecalls):    \n",
     "        newindex.append(uniquecalls.index(call))\n",
     "    else:\n",
-    "        newindex.append(uniquecalls_hpc.index(call)+1000)\n",
+    "        newindex.append(uniquecalls2.index(call)+1000)\n",
     "\n",
     "with open(os.path.join(PATH_TO_LOGFILE2)) as f:\n",
     "    lines = f.readlines()\n",
     "\n",
-    "calls_hpc = []\n",
+    "calls2 = []\n",
     "for ii, line in enumerate(lines):\n",
     "    call = line.split(' ')[1].split('(')[0]\n",
-    "    calls_hpc.append(newindex[uniquecalls_hpc.index(call)])"
+    "    calls2.append(newindex[uniquecalls2.index(call)])"
    ]
   },
   {
@@ -126,11 +149,11 @@
    "outputs": [],
    "source": [
     "calls_np = np.array(calls)\n",
-    "calls_hpc_np = np.array(calls_hpc)\n",
+    "calls2_np = np.array(calls2)\n",
     "\n",
     "# Exclude floorf \n",
     "calls_np_floorless = calls_np[calls_np != 0]\n",
-    "calls_hpc_np_floorless = calls_hpc_np[calls_hpc_np != 0]"
+    "calls2_np_floorless = calls2_np[calls2_np != 0]"
    ]
   },
   {
@@ -141,7 +164,7 @@
    "source": [
     "diff = [3,4,7,8,9,10,12,16,27,39,40,44,50,55,56,57,60,65,74,75,78,80]\n",
     "calls_diff = calls_np[np.isin(calls_np, diff)]\n",
-    "calls_hpc_diff = calls_hpc_np[np.isin(calls_hpc_np, diff)]"
+    "calls2_diff = calls2_np[np.isin(calls2_np, diff)]"
    ]
   },
   {
@@ -151,11 +174,11 @@
    "outputs": [],
    "source": [
     "a2=np.where(calls_np_floorless==2)[0]\n",
-    "b2=np.where(calls_hpc_np_floorless==2)[0]\n",
+    "b2=np.where(calls2_np_floorless==2)[0]\n",
     "plt.plot(a2, np.cumsum(a2!=b2))\n",
     "\n",
     "a4=np.where(calls_np_floorless==4)[0]\n",
-    "b4=np.where(calls_hpc_np_floorless==4)[0]\n",
+    "b4=np.where(calls2_np_floorless==4)[0]\n",
     "plt.plot(a4, np.cumsum(a4!=b4))"
    ]
   },
@@ -174,7 +197,7 @@
     "    if func == 88:\n",
     "        continue\n",
     "    a2=np.where(calls_np_floorless==func)[0]\n",
-    "    b2=np.where(calls_hpc_np_floorless==func)[0]\n",
+    "    b2=np.where(calls2_np_floorless==func)[0]\n",
     "    if len(a2) > len(b2):\n",
     "        a2 = a2[:len(b2)]\n",
     "    else:\n",
@@ -221,7 +244,7 @@
     "linecolor = ['blue', 'red', 'green', 'orange']\n",
     "for id, func in enumerate([8,12,39,44,80]):\n",
     "    a2=np.where(calls_np_floorless==func)[0]\n",
-    "    b2=np.where(calls_hpc_np_floorless==func)[0]\n",
+    "    b2=np.where(calls2_np_floorless==func)[0]\n",
     "    if len(a2) > len(b2):\n",
     "        a2 = a2[:len(b2)]\n",
     "    else:\n",
@@ -234,7 +257,7 @@
     "\n",
     "for id, func in enumerate([3, 16, 55]):\n",
     "    a2=np.where(calls_np_floorless==func)[0]\n",
-    "    b2=np.where(calls_hpc_np_floorless==func)[0]\n",
+    "    b2=np.where(calls2_np_floorless==func)[0]\n",
     "    if len(a2) > len(b2):\n",
     "        a2 = a2[:len(b2)]\n",
     "    else:\n",
@@ -247,7 +270,7 @@
     "\n",
     "for id, func in enumerate([4, 7, 9, 10, 27, 50, 75]):\n",
     "    a2=np.where(calls_np_floorless==func)[0]\n",
-    "    b2=np.where(calls_hpc_np_floorless==func)[0]\n",
+    "    b2=np.where(calls2_np_floorless==func)[0]\n",
     "    if len(a2) > len(b2):\n",
     "        a2 = a2[:len(b2)]\n",
     "    else:\n",
@@ -260,7 +283,7 @@
     "\n",
     "for id, func in enumerate([40,57,56,60,65,74,78]):\n",
     "    a2=np.where(calls_np_floorless==func)[0]\n",
-    "    b2=np.where(calls_hpc_np_floorless==func)[0]\n",
+    "    b2=np.where(calls2_np_floorless==func)[0]\n",
     "    if len(a2) > len(b2):\n",
     "        a2 = a2[:len(b2)]\n",
     "    else:\n",
@@ -272,7 +295,6 @@
     "    ax.plot(a2, diff, label='{}'.format(uniquecalls[func]).replace(\"__\",\"\"), linestyle=linestyle[id], color=linecolor[3])        \n",
     "\n",
     "ax.legend(loc='upper left')\n",
-    "ax.set_xlim(xmin=19550000, xmax=20500000)\n",
     "ax.set_yscale('symlog')\n",
     "ax.set_xlabel('Calls')\n",
     "ax.set_ylabel('Cumulative difference')"
