add details to instruction for fsl pipeline

--- a/tracelog.ipynb
+++ b/tracelog.ipynb
@@ -19,8 +19,8 @@
     "\n",
     "## Notebook Workflow\n",
     "1. Iterate through each logfile and log summary.\n",
-    "2. Compare the . \n",
-    "3. Generate plot "
+    "2. Compare the sequence in each logfile by called functions, keep count for the number of mismatch between two sequences.\n",
+    "3. Generate plot"
    ]
   },
   {
