--- a/fsl_pipeline.ipynb
+++ b/fsl_pipeline.ipynb
@@ -3,6 +3,36 @@
   {
    "attachments": {},
    "cell_type": "markdown",
+   "id": "34a09416",
+   "metadata": {},
+   "source": [
+    "# Brain Extraction Tool (FSL BET), tissue classification (FSL-FAST), image registration (FSL-FLIRT), and subcortical tissue segmentation (FSL-FIRST) pipeline \n",
+    "\n",
+    "In this Jupyter notebook, we will be processing cortical and subcortical segmentation using FSL within Neurodesk.\n",
+    "\n",
+    "Make sure to run in Neurodesk environment\n",
+    "\n",
+    "## Inputs\n",
+    "- MR images\n",
+    "\n",
+    "## Outputs\n",
+    "- \"*brain.nii.gz\": FSL BET output\n",
+    "- \"*brain_seg.nii.gz\": FSL FAST output\n",
+    "- \"*to_std_sub.nii.gz\": FSL FLIRT output\n",
+    "- \"*all_fast_firstseg.nii.gz\": FSL FIRST output\n",
+    "- \"*all_fast_firstseg_mni.nii.gz\": FSL FIRST output registered to MNI512 template\n",
+    "\n",
+    "## Notebook Workflow\n",
+    "1. Upload data.\n",
+    "2. Iterate through all files with the .nii extension in the current working directory TWICE.\n",
+    "3. Process the images for cortical and subcortical segmentation.\n",
+    "4. Generate logfile in each run to verify same checksum iter-run.\n",
+    "5. Register the segmented subcortical structures to MNI512 template."
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
    "id": "35a53844-066e-4384-83b5-c8328622adea",
    "metadata": {},
    "source": [
@@ -80,7 +110,7 @@
     "\t\t\tfast ${filename%.*}_brain.nii.gz\t\n",
     "\t\tdone\n",
     "\t\n",
-    "\tfind . -type f -name '*brain.nii.gz' -name 'brain_seg.nii.gz' -name '*all_fast_firstseg.nii.gz' -name '*to_std_sub.nii.gz' -exec md5sum {} > $lm1 \\;\n",
+    "\tfind . -type f -name '*brain.nii.gz' -name 'brain_seg.nii.gz' -name '*to_std_sub.nii.gz' -name '*all_fast_firstseg.nii.gz'  -name '*all_fast_firstseg_mni.nii.gz' -exec md5sum {} > $lm1 \\;\n",
     "\tif [ -z \"$first_run\" ]; then\n",
     "        cp -a $lm1 $lm2\n",
     "        first_run=1\n",
