add output dir in instruction

--- a/Dice_calculate.ipynb
+++ b/Dice_calculate.ipynb
@@ -14,6 +14,7 @@
     "- Two directories containing neuroimaging volumes (source_dir, target_dir)\n",
     "\n",
     "## Outputs\n",
+    "To be found in your specified \"PATH_TO_OUTPUT_DIR\" directory:\n",
     "- Dice score of the two volumes\n",
     "- .txt file of all Dice scores\n",
     "- histogram plot in .png format\n",
