fix dir for metadata.csv. not rm .csv after first run

--- a/correlation_difference.ipynb
+++ b/correlation_difference.ipynb
@@ -29,6 +29,15 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "!pip install joypy"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "import pandas as pd\n",
     "import os, glob\n",
     "import numpy as np\n",
@@ -49,15 +58,15 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "metadata = pd.read_csv(os.path.join(os.getcwd(), 'data/metadata.csv'))\n",
+    "metadata = pd.read_csv(os.path.join(os.path.dirname(os.path.realpath(\"metadata.csv\")), 'data/metadata.csv'))\n",
     "\n",
     "samples = [10, 30, 50]\n",
-    "volume_list_all = sorted(glob.glob(os.path.join(os.getcwd(), 'data/volume', '*.csv')))\n",
+    "volume_list_all = sorted(glob.glob(os.path.join( os.path.dirname(os.path.realpath(\"metadata.csv\")), 'data/volume', '*.csv')))\n",
     "\n",
     "segs = ['Left-Thalamus-Proper', 'Left-Caudate', 'Left-Putamen', 'Left-Pallidum',\n",
     "'Left-Hippocampus', 'Left-Amygdala', 'Left-Accumbens-area',\n",
     "'Right-Thalamus-Proper', 'Right-Caudate', 'Right-Putamen','Right-Pallidum',\n",
-    "'Right-Hippocampus', 'Right-Amygdala', 'Right-Accumbens-area', 'Brain-Stem']\n",
+    "'Right-Hippocampus', 'Right-Amygdala', 'Right-Accumbens-area']\n",
     "\n",
     "sample = []\n",
     "stat_neuro = []\n",
@@ -194,12 +203,10 @@
     "            return pearsonr(x, y)[0]\n",
     "        stat = permutation_test((sys['age'], sys['subcortical']), statistic, vectorized=False,\n",
     "                            permutation_type='pairings',\n",
-    "                            # alternative='greater',\n",
     "                            random_state=0)\n",
     "\n",
     "        stat2 = permutation_test((sys2['age'], sys2['subcortical']), statistic, vectorized=False,\n",
     "                            permutation_type='pairings',\n",
-    "                            # alternative='greater', \n",
     "                            random_state=0)        \n",
     "        stat_local.append(stat.statistic - stat2.statistic)  \n",
     "          \n",
@@ -240,12 +247,10 @@
     "            return pearsonr(x, y)[0]\n",
     "        stat = permutation_test((sys['age'], sys['subcortical']), statistic, vectorized=False,\n",
     "                            permutation_type='pairings',\n",
-    "                            # alternative='greater',\n",
     "                            random_state=0)\n",
     "\n",
     "        stat2 = permutation_test((sys2['age'], sys2['subcortical']), statistic, vectorized=False,\n",
     "                            permutation_type='pairings',\n",
-    "                            # alternative='greater', \n",
     "                            random_state=0)        \n",
     "        stat_local.append(stat.statistic - stat2.statistic)     \n"
    ]
