--- a/flirt_first_correlation.ipynb
+++ b/flirt_first_correlation.ipynb
@@ -225,13 +225,11 @@
     "stat_img = nb.load('./intensity_diff_subcortical.nii')\n",
     "stat_nii = np.array(stat_img.get_fdata(), dtype=np.float32)\n",
     "\n",
-    "plotting.plot_glass_brain(stat_img, axes=ax1, vmin=np.min(stat_nii[np.nonzero(stat_nii)]), vmax=np.amax(stat_nii), title=\"system 1 and system 2\")\n",
+    "plotting.plot_glass_brain(stat_img, axes=ax1,title=\"system 1 and system 2\")\n",
     "\n",
     "ax3 = plt.subplot2grid(shape=(35, 14), loc=(0, 13), colspan=1, rowspan=35)\n",
     "\n",
-    "norma_diff = mpl.colors.Normalize(vmin=np.min(stat_nii[np.nonzero(stat_nii)]), vmax=np.amax(stat_nii))\n",
     "cb = mpl.colorbar.ColorbarBase(ax3, cmap=mpl.cm.get_cmap('hot_r'),\n",
-    "                                    norm=norma_diff,\n",
     "                                    orientation='vertical')\n",
     "cb.set_label('Average Intensity difference')\n",
     "plotting.show()"
