--- a/fsl_pipeline.ipynb
+++ b/fsl_pipeline.ipynb
@@ -128,7 +128,7 @@
     "    mv $lm1 $lm2\n",
     "    echo $first_run\n",
     "\tif [ $first_run == 1 ]; then\n",
-    "        find . ! -name '*.nii' ! -name '*.ipynb' -type f -exec rm -f {} +\n",
+    "        find . ! -name '*.nii' ! -name '*.ipynb' ! -name '*.csv' -type f -exec rm -f {} +\n",
     "    fi\n",
     "done\n",
     "\n",
