add processed data

--- a/correlation_difference.ipynb
+++ b/correlation_difference.ipynb
@@ -60,7 +60,7 @@
    "source": [
     "metadata = pd.read_csv(os.path.join(os.path.dirname(os.path.realpath(\"metadata.csv\")), 'data/metadata.csv'))\n",
     "\n",
-    "samples = [10, 30, 50]\n",
+    "samples = [15, 30, 60]\n",
     "volume_list_all = sorted(glob.glob(os.path.join( os.path.dirname(os.path.realpath(\"metadata.csv\")), 'data/volume', '*.csv')))\n",
     "\n",
     "segs = ['Left-Thalamus-Proper', 'Left-Caudate', 'Left-Putamen', 'Left-Pallidum',\n",
@@ -263,9 +263,9 @@
    "source": [
     "difference = pd.DataFrame({'n': sample, 'neurodesk': stat_neuro, 'local': stat_local})\n",
     "\n",
-    "sample_dict = {10: 'n=10', 30: 'n=30', 50: 'n=50'}\n",
+    "sample_dict = {15: 'n=15', 30: 'n=30', 60: 'n=60'}\n",
     "difference['n'] = difference['n'].map(sample_dict)\n",
-    "n_sample = CategoricalDtype(categories=['n=50','n=30','n=10'], ordered=True)\n",
+    "n_sample = CategoricalDtype(categories=['n=60','n=30','n=15'], ordered=True)\n",
     "difference['n'] = difference['n'].astype(n_sample)\n",
     "\n",
     "fig, ax = joyplot(\n",
@@ -302,7 +302,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.10 (default, Nov 14 2022, 12:59:47) \n[GCC 9.4.0]"
+   "version": "3.8.10"
   },
   "orig_nbformat": 4,
   "vscode": {
