--- a/correlation_difference.ipynb
+++ b/correlation_difference.ipynb
@@ -50,7 +50,7 @@
     }
    ],
    "source": [
-    "!pip install joypy"
+    "!pip install joypy seaborn"
    ]
   },
   {
@@ -75,7 +75,7 @@
     "import seaborn as sns\n",
     "import matplotlib.pyplot as plt\n",
     "import pandas as pd\n",
-    "from scipy.stats.stats import pearsonr\n",
+    "from scipy.stats import pearsonr\n",
     "from scipy.stats import permutation_test\n",
     "import random\n",
     "from joypy import joyplot\n",
@@ -100,7 +100,7 @@
     "metadata = pd.read_csv(os.path.join(os.path.dirname(os.path.realpath(\"metadata.csv\")), 'data/metadata.csv'))\n",
     "\n",
     "samples = [10, 30, 50]\n",
-    "volume_list_all = sorted(glob.glob(os.path.join( os.path.dirname(os.path.realpath(\"metadata.csv\")), 'data/volume', '*.csv')))\n",
+    "volume_list_all = sorted(glob.glob(os.path.join( os.path.dirname(os.path.realpath(\"metadata.csv\")), './volume', '*.csv')))\n",
     "\n",
     "segs = ['Left-Thalamus-Proper', 'Left-Caudate', 'Left-Putamen', 'Left-Pallidum',\n",
     "'Left-Hippocampus', 'Left-Amygdala', 'Left-Accumbens-area',\n",
