--- a/flirt_first_correlation.ipynb
+++ b/flirt_first_correlation.ipynb
@@ -94,7 +94,7 @@
     "import nibabel as nb\n",
     "import seaborn as sns\n",
     "import pandas as pd\n",
-    "from scipy.stats.stats import pearsonr\n",
+    "from scipy.stats import pearsonr\n",
     "import os, glob\n",
     "from nilearn.image import resample_img\n",
     "from nilearn.datasets import load_mni152_template\n",
@@ -174,11 +174,12 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
-   "id": "ebf6b0d8-8b8b-4575-be3e-faa991803b43",
+   "id": "4ecf70e2",
    "metadata": {},
    "source": [
-    "## Scatterplot of correlation between average intensity difference and number of mismatches"
+    "## Plot heatmap of average mismatch"
    ]
   },
   {
@@ -232,6 +233,14 @@
     "ax3.yaxis.set_major_locator(plt.MaxNLocator(5))\n",
     "ax3.yaxis.set_minor_locator(plt.MaxNLocator(20))\n",
     "plotting.show()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "ebf6b0d8-8b8b-4575-be3e-faa991803b43",
+   "metadata": {},
+   "source": [
+    "## Scatterplot of correlation between average intensity difference and number of mismatches"
    ]
   },
   {
